# calcalc

./: .gitignore  CalCalc.py  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: pr.yml  push.yml  wf.yml
src/: CalCalc.py  __init__.py  tests.py
