[metadata]
name = CalCalc
version = 1.0.0
description = CalCalc: CLI calculator and Wolfram Alpha access point
long_description = file: README.rst
author = Christian Hellum Bye
author_email = chbye@berkeley.edu
license = MIT
url = https://github.com/christianhbye/calcalc
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Utilities


[options]
python_requires = >= 3.6
packages=find:
install_requires =
    numpy
    requests

[options.extras_require]
dev = 
    black
    flake8
    mypy
    pytest

